--- a/GadgetGmail/.classpath
+++ b/GadgetGmail/.classpath
@@ -9,5 +9,10 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/GadgetGmail/libs/gwt-gadgets-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/gwt-oauth2-0.2-alpha.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://gwt-oauth2.googlecode.com/svn/trunk/javadoc/latest/index.html"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
